[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/title/title.gd" type="Script" id=1]
[ext_resource path="res://themes/main.tres" type="Theme" id=2]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Name" type="Label" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 480.0
margin_bottom = 84.0
text = "Name of Game"
align = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_left = 220.0
margin_top = 88.0
margin_right = 259.0
margin_bottom = 107.0
size_flags_horizontal = 4
text = "Start"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_left = 222.0
margin_top = 111.0
margin_right = 258.0
margin_bottom = 130.0
size_flags_horizontal = 4
text = "Load"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_left = 212.0
margin_top = 134.0
margin_right = 267.0
margin_bottom = 153.0
size_flags_horizontal = 4
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_left = 215.0
margin_top = 157.0
margin_right = 264.0
margin_bottom = 176.0
size_flags_horizontal = 4
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_left = 224.0
margin_top = 180.0
margin_right = 256.0
margin_bottom = 199.0
size_flags_horizontal = 4
text = "Quit"

[node name="CreditsPop" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -67.5
margin_right = 120.0
margin_bottom = 67.5
rect_min_size = Vector2( 240, 135 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
bbcode_enabled = true
bbcode_text = "[center]Made with [url=https://godotengine.org/]Godot 3.4.4[/url]
Programmed by Exuin[/center]"
text = "Made with Godot 3.4.4
Programmed by Exuin"
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="meta_clicked" from="CreditsPop/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
